--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -901,24 +901,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
     "mortgage = pd.read_csv('30yrMortgageRates.csv')\n",
     "fedFunds = pd.read_csv('FEDFUNDS.csv')\n",
-    "cpi = pd.read_csv('Median_CPI.csv')"
+    "cpi = pd.read_csv('median_cpi.csv')\n",
+    "ur = pd.read_csv('TXUR.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert columns to correct type\n",
     "fedFunds['observation_date'] = pd.to_datetime(fedFunds['observation_date'])\n",
     "cpi['observation_date'] = pd.to_datetime(cpi['observation_date'])\n",
+    "ur['observation_date'] = pd.to_datetime(ur['observation_date'])\n",
+    "\n",
+    "ur['unemployment_rate_TX'] = ur['TXUR']\n",
+    "fedFunds['fed_funds'] = fedFunds['DFF']\n",
     "\n",
     "# Convert observation_date to datetime if it's not already\n",
     "mortgage['observation_date'] = pd.to_datetime(mortgage['observation_date'])\n",
@@ -945,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,9 +958,9 @@
     "\n",
     "# List of dataframes to join\n",
     "dataframes = [\n",
-    "    cpi, fedFunds, monthly_mortgage, \n",
-    "    zillow_df[['observation_date', 'ZHVI']], \n",
-    "    realtor_df[['observation_date', 'median_listing_price', 'hotness_score', 'supply_score', 'demand_score']]\n",
+    "    cpi, fedFunds[['observation_date', 'fed_funds']], monthly_mortgage, ur[['observation_date', 'unemployment_rate_TX']],\n",
+    "    # realtor_df[['observation_date', 'median_listing_price', 'hotness_score', 'supply_score', 'demand_score']]\n",
+    "    zillow_df[['observation_date', 'ZHVI']]\n",
     "]\n",
     "\n",
     "# Join all dataframes on observation_date\n",
@@ -964,12 +969,22 @@
     "\n",
     "combined_data['cpi'] = combined_data['MEDCPIM158SFRBCLE']\n",
     "combined_data['mortgage'] = combined_data['MORTGAGE30US']\n",
-    "combined_data.drop(columns=['MEDCPIM158SFRBCLE', 'MORTGAGE30US'], inplace=True)"
+    "combined_data.drop(columns=['MEDCPIM158SFRBCLE', 'MORTGAGE30US'], inplace=True)\n",
+    "\n",
+    "# Do some feature engineering\n",
+    "# Year-over-year change (more stable and meaningful)\n",
+    "combined_data['zhvi_yoy_change'] = combined_data['ZHVI'].pct_change(12) * 100\n",
+    "\n",
+    "# Month-over-month change\n",
+    "combined_data['zhvi_mom_change'] = combined_data['ZHVI'].pct_change() * 100\n",
+    "\n",
+    "# Log transformation for exponential growth\n",
+    "combined_data['log_zhvi'] = np.log(combined_data['ZHVI'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -994,76 +1009,76 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>observation_date</th>\n",
-       "      <th>FEDFUNDS</th>\n",
+       "      <th>fed_funds</th>\n",
+       "      <th>unemployment_rate_TX</th>\n",
        "      <th>ZHVI</th>\n",
-       "      <th>median_listing_price</th>\n",
-       "      <th>hotness_score</th>\n",
-       "      <th>supply_score</th>\n",
-       "      <th>demand_score</th>\n",
        "      <th>cpi</th>\n",
        "      <th>mortgage</th>\n",
+       "      <th>zhvi_yoy_change</th>\n",
+       "      <th>zhvi_mom_change</th>\n",
+       "      <th>log_zhvi</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2018-01-01</td>\n",
-       "      <td>1.41</td>\n",
-       "      <td>291146.124224</td>\n",
-       "      <td>359513.25</td>\n",
-       "      <td>55.959161</td>\n",
-       "      <td>43.061536</td>\n",
-       "      <td>68.856786</td>\n",
-       "      <td>4.170000</td>\n",
-       "      <td>4.0325</td>\n",
+       "      <td>2009-01-01</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>188438.751221</td>\n",
+       "      <td>2.403641</td>\n",
+       "      <td>5.0475</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.146528</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2018-02-01</td>\n",
-       "      <td>1.42</td>\n",
-       "      <td>292937.256418</td>\n",
-       "      <td>355990.00</td>\n",
-       "      <td>60.615309</td>\n",
-       "      <td>47.533853</td>\n",
-       "      <td>73.696766</td>\n",
-       "      <td>2.013279</td>\n",
-       "      <td>4.3300</td>\n",
+       "      <td>2009-02-01</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>188099.168468</td>\n",
+       "      <td>2.143576</td>\n",
+       "      <td>5.1300</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.180209</td>\n",
+       "      <td>12.144725</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2018-03-01</td>\n",
-       "      <td>1.51</td>\n",
-       "      <td>294455.789740</td>\n",
-       "      <td>353725.00</td>\n",
-       "      <td>56.707528</td>\n",
-       "      <td>44.331325</td>\n",
-       "      <td>69.083732</td>\n",
-       "      <td>1.961900</td>\n",
-       "      <td>4.4440</td>\n",
+       "      <td>2009-03-01</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>187923.385526</td>\n",
+       "      <td>1.908290</td>\n",
+       "      <td>5.0025</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.093452</td>\n",
+       "      <td>12.143790</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2018-04-01</td>\n",
-       "      <td>1.69</td>\n",
-       "      <td>295985.955408</td>\n",
-       "      <td>353813.75</td>\n",
-       "      <td>59.518286</td>\n",
-       "      <td>47.659662</td>\n",
-       "      <td>71.376910</td>\n",
-       "      <td>2.932009</td>\n",
-       "      <td>4.4675</td>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>187400.473974</td>\n",
+       "      <td>1.861170</td>\n",
+       "      <td>4.8100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.278258</td>\n",
+       "      <td>12.141003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2018-05-01</td>\n",
-       "      <td>1.70</td>\n",
-       "      <td>297367.026385</td>\n",
-       "      <td>349990.00</td>\n",
-       "      <td>75.104700</td>\n",
-       "      <td>68.796118</td>\n",
-       "      <td>81.413282</td>\n",
-       "      <td>2.981833</td>\n",
-       "      <td>4.5860</td>\n",
+       "      <td>2009-05-01</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>186960.172194</td>\n",
+       "      <td>1.293769</td>\n",
+       "      <td>4.8575</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.234952</td>\n",
+       "      <td>12.138651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1078,101 +1093,101 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>87</th>\n",
+       "      <th>195</th>\n",
        "      <td>2025-04-01</td>\n",
        "      <td>4.33</td>\n",
+       "      <td>4.1</td>\n",
        "      <td>454746.398462</td>\n",
-       "      <td>545000.00</td>\n",
-       "      <td>48.297491</td>\n",
-       "      <td>42.310199</td>\n",
-       "      <td>54.284783</td>\n",
        "      <td>3.980957</td>\n",
        "      <td>6.7250</td>\n",
+       "      <td>-0.905230</td>\n",
+       "      <td>-0.219994</td>\n",
+       "      <td>13.027495</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>88</th>\n",
+       "      <th>196</th>\n",
        "      <td>2025-05-01</td>\n",
        "      <td>4.33</td>\n",
+       "      <td>4.1</td>\n",
        "      <td>453405.242441</td>\n",
-       "      <td>539900.00</td>\n",
-       "      <td>50.274874</td>\n",
-       "      <td>40.758808</td>\n",
-       "      <td>59.790941</td>\n",
        "      <td>2.695123</td>\n",
        "      <td>6.8160</td>\n",
+       "      <td>-1.138044</td>\n",
+       "      <td>-0.294924</td>\n",
+       "      <td>13.024542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
+       "      <th>197</th>\n",
        "      <td>2025-06-01</td>\n",
        "      <td>4.33</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>452048.962695</td>\n",
-       "      <td>546000.00</td>\n",
-       "      <td>50.860643</td>\n",
-       "      <td>42.288034</td>\n",
-       "      <td>59.433253</td>\n",
        "      <td>4.084968</td>\n",
        "      <td>6.8175</td>\n",
+       "      <td>-1.177501</td>\n",
+       "      <td>-0.299132</td>\n",
+       "      <td>13.021546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
+       "      <th>198</th>\n",
        "      <td>2025-07-01</td>\n",
        "      <td>4.33</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>450995.150491</td>\n",
-       "      <td>539475.00</td>\n",
-       "      <td>50.151582</td>\n",
-       "      <td>40.128660</td>\n",
-       "      <td>60.174505</td>\n",
        "      <td>3.367945</td>\n",
        "      <td>6.7200</td>\n",
+       "      <td>-1.103336</td>\n",
+       "      <td>-0.233119</td>\n",
+       "      <td>13.019212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>91</th>\n",
+       "      <th>199</th>\n",
        "      <td>2025-08-01</td>\n",
        "      <td>4.33</td>\n",
+       "      <td>4.1</td>\n",
        "      <td>450762.653868</td>\n",
-       "      <td>540000.00</td>\n",
-       "      <td>44.388385</td>\n",
-       "      <td>31.970962</td>\n",
-       "      <td>56.805808</td>\n",
        "      <td>3.368096</td>\n",
        "      <td>6.5875</td>\n",
+       "      <td>-1.013063</td>\n",
+       "      <td>-0.051552</td>\n",
+       "      <td>13.018696</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>92 rows × 9 columns</p>\n",
+       "<p>200 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   observation_date  FEDFUNDS           ZHVI  median_listing_price  \\\n",
-       "0        2018-01-01      1.41  291146.124224             359513.25   \n",
-       "1        2018-02-01      1.42  292937.256418             355990.00   \n",
-       "2        2018-03-01      1.51  294455.789740             353725.00   \n",
-       "3        2018-04-01      1.69  295985.955408             353813.75   \n",
-       "4        2018-05-01      1.70  297367.026385             349990.00   \n",
-       "..              ...       ...            ...                   ...   \n",
-       "87       2025-04-01      4.33  454746.398462             545000.00   \n",
-       "88       2025-05-01      4.33  453405.242441             539900.00   \n",
-       "89       2025-06-01      4.33  452048.962695             546000.00   \n",
-       "90       2025-07-01      4.33  450995.150491             539475.00   \n",
-       "91       2025-08-01      4.33  450762.653868             540000.00   \n",
+       "    observation_date  fed_funds  unemployment_rate_TX           ZHVI  \\\n",
+       "0         2009-01-01       0.14                   6.1  188438.751221   \n",
+       "1         2009-02-01       0.23                   6.3  188099.168468   \n",
+       "2         2009-03-01       0.22                   6.4  187923.385526   \n",
+       "3         2009-04-01       0.16                   6.5  187400.473974   \n",
+       "4         2009-05-01       0.22                   7.6  186960.172194   \n",
+       "..               ...        ...                   ...            ...   \n",
+       "195       2025-04-01       4.33                   4.1  454746.398462   \n",
+       "196       2025-05-01       4.33                   4.1  453405.242441   \n",
+       "197       2025-06-01       4.33                   4.0  452048.962695   \n",
+       "198       2025-07-01       4.33                   4.0  450995.150491   \n",
+       "199       2025-08-01       4.33                   4.1  450762.653868   \n",
        "\n",
-       "    hotness_score  supply_score  demand_score       cpi  mortgage  \n",
-       "0       55.959161     43.061536     68.856786  4.170000    4.0325  \n",
-       "1       60.615309     47.533853     73.696766  2.013279    4.3300  \n",
-       "2       56.707528     44.331325     69.083732  1.961900    4.4440  \n",
-       "3       59.518286     47.659662     71.376910  2.932009    4.4675  \n",
-       "4       75.104700     68.796118     81.413282  2.981833    4.5860  \n",
-       "..            ...           ...           ...       ...       ...  \n",
-       "87      48.297491     42.310199     54.284783  3.980957    6.7250  \n",
-       "88      50.274874     40.758808     59.790941  2.695123    6.8160  \n",
-       "89      50.860643     42.288034     59.433253  4.084968    6.8175  \n",
-       "90      50.151582     40.128660     60.174505  3.367945    6.7200  \n",
-       "91      44.388385     31.970962     56.805808  3.368096    6.5875  \n",
+       "          cpi  mortgage  zhvi_yoy_change  zhvi_mom_change   log_zhvi  \n",
+       "0    2.403641    5.0475              NaN              NaN  12.146528  \n",
+       "1    2.143576    5.1300              NaN        -0.180209  12.144725  \n",
+       "2    1.908290    5.0025              NaN        -0.093452  12.143790  \n",
+       "3    1.861170    4.8100              NaN        -0.278258  12.141003  \n",
+       "4    1.293769    4.8575              NaN        -0.234952  12.138651  \n",
+       "..        ...       ...              ...              ...        ...  \n",
+       "195  3.980957    6.7250        -0.905230        -0.219994  13.027495  \n",
+       "196  2.695123    6.8160        -1.138044        -0.294924  13.024542  \n",
+       "197  4.084968    6.8175        -1.177501        -0.299132  13.021546  \n",
+       "198  3.367945    6.7200        -1.103336        -0.233119  13.019212  \n",
+       "199  3.368096    6.5875        -1.013063        -0.051552  13.018696  \n",
        "\n",
-       "[92 rows x 9 columns]"
+       "[200 rows x 9 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,6 +1195,13 @@
    "source": [
     "combined_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
